--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
   },
   "devDependencies": {
     "prettier": "2.8.8"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
